--- a/Android/handdryer-app/src/main/res/layout/activity_main.xml
+++ b/Android/handdryer-app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,13 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="jp.tetra2000.handdryer.MainActivity">
 
-    <TextView
-        android:text="@string/hello_world"
+    <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
 
+        android:src="@drawable/normal"
+        android:layout_marginBottom="60dp"/>
 </RelativeLayout>
